force-app/main/default/objects/ContentVersion/fields/Original_Record__c.field-meta.xml
<CustomField>
    <fullName>Original_Record__c</fullName>
    <description>This field has been created as per the EBA_SF-1640. We are referring this field in a batch class(BatchNotesAndAttachmentConverter) to handle duplicate files creation.</description>
    <label>Original Record</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>