force-app/main/default/objects/ContentVersion/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Theater</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMEA</fullName>
            </value>
            <value>
                <fullName>AMERICAS</fullName>
            </value>
            <value>
                <fullName>EUROPE</fullName>
            </value>
            <value>
                <fullName>JAPAN KOREA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>