force-app/main/default/objects/ContentVersion/recordTypes/Presentations.recordType-meta.xml
<RecordType>
    <fullName>Presentations</fullName>
    <active>true</active>
    <label>Presentations</label>
</RecordType>